// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataList Cell default 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-data-list__cell"
  >
    Secondary
  </div>
</DocumentFragment>
`;

exports[`DataList Cells 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-data-list__item-content"
  >
    <div
      class="pf-v5-c-data-list__cell data-list-custom"
      id="primary-item"
    >
      Primary Id
    </div>
    <div
      class="pf-v5-c-data-list__cell data-list-custom"
      id="primary-item"
    >
      Primary Id 2
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataList DataList variants Breakpoint - 2xl 1`] = `
<DocumentFragment>
  <ul
    aria-label="this is a simple list"
    class="pf-v5-c-data-list pf-m-grid-2xl"
    role="list"
  />
</DocumentFragment>
`;

exports[`DataList DataList variants Breakpoint - always 1`] = `
<DocumentFragment>
  <ul
    aria-label="this is a simple list"
    class="pf-v5-c-data-list pf-m-grid"
    role="list"
  />
</DocumentFragment>
`;

exports[`DataList DataList variants Breakpoint - lg 1`] = `
<DocumentFragment>
  <ul
    aria-label="this is a simple list"
    class="pf-v5-c-data-list pf-m-grid-lg"
    role="list"
  />
</DocumentFragment>
`;

exports[`DataList DataList variants Breakpoint - md 1`] = `
<DocumentFragment>
  <ul
    aria-label="this is a simple list"
    class="pf-v5-c-data-list pf-m-grid-md"
    role="list"
  />
</DocumentFragment>
`;

exports[`DataList DataList variants Breakpoint - none 1`] = `
<DocumentFragment>
  <ul
    aria-label="this is a simple list"
    class="pf-v5-c-data-list pf-m-grid-none"
    role="list"
  />
</DocumentFragment>
`;

exports[`DataList DataList variants Breakpoint - sm 1`] = `
<DocumentFragment>
  <ul
    aria-label="this is a simple list"
    class="pf-v5-c-data-list pf-m-grid-sm"
    role="list"
  />
</DocumentFragment>
`;

exports[`DataList DataList variants Breakpoint - xl 1`] = `
<DocumentFragment>
  <ul
    aria-label="this is a simple list"
    class="pf-v5-c-data-list pf-m-grid-xl"
    role="list"
  />
</DocumentFragment>
`;

exports[`DataList DataListAction button 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-data-list__item-action"
  >
    <button
      aria-disabled="false"
      class="pf-v5-c-button pf-m-primary"
      data-ouia-component-id="OUIA-Generated-Button-primary-1"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      id="delete-item-1"
      type="button"
    >
      Delete
    </button>
  </div>
</DocumentFragment>
`;

exports[`DataList DataListAction dropdown 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-data-list__item-action"
  >
    <div
      class="pf-v5-c-data-list__action"
    >
      <button
        aria-expanded="false"
        class="pf-v5-c-menu-toggle"
        type="button"
      >
        <span
          class="pf-v5-c-menu-toggle__text"
        />
        <span
          class="pf-v5-c-menu-toggle__controls"
        >
          <span
            class="pf-v5-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </span>
        </span>
      </button>
      <div
        class="pf-v5-c-menu"
        data-ouia-component-id="OUIA-Generated-Dropdown-1"
        data-ouia-component-type="PF5/Dropdown"
        data-ouia-safe="true"
        style="position: absolute; left: 0px; top: 0px; z-index: 9999; opacity: 0; transition: opacity 0ms cubic-bezier(.54, 1.5, .38, 1.11);"
      >
        <div
          class="pf-v5-c-menu__content"
        >
          <ul
            class="pf-v5-c-menu__list"
            role="menu"
          >
            <li
              class="pf-v5-c-menu__list-item"
              data-ouia-component-id="OUIA-Generated-DropdownItem-1"
              data-ouia-component-type="PF5/DropdownItem"
              data-ouia-safe="true"
              role="none"
            >
              <button
                class="pf-v5-c-menu__item"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <span
                  class="pf-v5-c-menu__item-main"
                >
                  <span
                    class="pf-v5-c-menu__item-text"
                  >
                    action-1
                  </span>
                </span>
              </button>
            </li>
            ,
            <li
              class="pf-v5-c-menu__list-item"
              data-ouia-component-id="OUIA-Generated-DropdownItem-2"
              data-ouia-component-type="PF5/DropdownItem"
              data-ouia-safe="true"
              role="none"
            >
              <button
                class="pf-v5-c-menu__item"
                role="menuitem"
                tabindex="-1"
                type="button"
              >
                <span
                  class="pf-v5-c-menu__item-main"
                >
                  <span
                    class="pf-v5-c-menu__item-text"
                  >
                    action-2
                  </span>
                </span>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataList DataListContent 1`] = `
<DocumentFragment>
  <section
    aria-label="Primary Content Details"
    class="pf-v5-c-data-list__expandable-content"
    id=""
  >
    <div
      class="pf-v5-c-data-list__expandable-content-body"
    >
       test
    </div>
  </section>
</DocumentFragment>
`;

exports[`DataList DataListContent hasNoPadding 1`] = `
<DocumentFragment>
  <section
    aria-label="Primary Content Details"
    class="pf-v5-c-data-list__expandable-content"
    hidden=""
    id=""
  >
    <div
      class="pf-v5-c-data-list__expandable-content-body pf-m-no-padding"
    >
      test
    </div>
  </section>
</DocumentFragment>
`;

exports[`DataList Item 1`] = `
<DocumentFragment>
  <li
    aria-labelledby="item-1"
    class="pf-v5-c-data-list__item data-list-item-custom"
    id=""
  />
</DocumentFragment>
`;

exports[`DataList Item default 1`] = `
<DocumentFragment>
  <li
    aria-labelledby="item-1"
    class="pf-v5-c-data-list__item"
    id=""
  />
</DocumentFragment>
`;

exports[`DataList List 1`] = `
<DocumentFragment>
  <ul
    aria-label="this is a simple list"
    class="pf-v5-c-data-list pf-m-grid-md data-list-custom"
    role="list"
  />
</DocumentFragment>
`;

exports[`DataList List compact 1`] = `
<DocumentFragment>
  <ul
    aria-label="this is a simple list"
    class="pf-v5-c-data-list pf-m-compact pf-m-grid-md"
    role="list"
  />
</DocumentFragment>
`;

exports[`DataList List default 1`] = `
<DocumentFragment>
  <ul
    aria-label="this is a simple list"
    class="pf-v5-c-data-list pf-m-grid-md"
    role="list"
  />
</DocumentFragment>
`;

exports[`DataList List draggable 1`] = `
<DocumentFragment>
  <ul
    aria-label="this is a simple list"
    class="pf-v5-c-data-list pf-m-compact pf-m-grid-md"
    role="list"
  />
</DocumentFragment>
`;

exports[`DataList item row default 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-data-list__item-row"
  />
</DocumentFragment>
`;
